# amigo-downloader

./: .gitignore  .impeccable.md  CLAUDE.md  Cargo.toml  Cross.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  wrangler.jsonc
.cargo/: audit.toml
.claude/: settings.local.json
.claude/skills/feature/: SKILL.md
.claude/skills/spec/: SKILL.md
.claude/skills/spec-extract/: SKILL.md
.claude/skills/spec-feature/: SKILL.md
.claude/skills/spec-fix/: SKILL.md
.claude/skills/spec-implement/: SKILL.md
.claude/skills/spec-verify/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  nightly.yml  release-build.yml  release-please.yml  site.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  remotes.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: bandwidth.rs  captcha.rs  chunk.rs  config.rs  container.rs  coordinator.rs  i18n.rs  lib.rs  postprocess.rs  queue.rs  retry.rs  storage.rs  update_events.rs  updater.rs
crates/core/src/protocol/: dash.rs  hls.rs  http.rs  mod.rs  torrent.rs  usenet.rs  youtube.rs
crates/core/src/protocol/usenet/: mod.rs  nntp.rs  nzb.rs  yenc.rs
crates/core/tests/: coordinator.rs  download_lifecycle_tests.rs  storage_tests.rs
crates/extractors/: Cargo.toml
crates/extractors/src/: error.rs  lib.rs  traits.rs
crates/extractors/src/generic/: metadata.rs  mod.rs  players.rs
crates/extractors/src/youtube/: formats.rs  innertube.rs  mod.rs  n_challenge.rs  url_parser.rs
crates/plugin-runtime/: Cargo.toml  build.rs
crates/plugin-runtime/src/: engine.rs  host_api.rs  lib.rs  loader.rs  registry.rs  sandbox.rs  transpiler.rs  types.rs  updater.rs
crates/plugin-runtime/tests/: host_api_tests.rs  runtime_tests.rs  sandbox_tests.rs  spec_runner.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  auth.rs  background.rs  clicknload.rs  feedback.rs  lib.rs  login.rs  main.rs  net_guard.rs  nzbget_api.rs  pairing.rs  password.rs  resolver.rs  security_headers.rs  setup.rs  static_files.rs  update_api.rs  webhooks.rs  ws.rs
crates/server/tests/: api_tests.rs  auth_flow_tests.rs  ws_tests.rs
docker/: .env.example  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  docker-entrypoint.sh
docs/: app-review-2026-05.md  architecture.md  hosting.md  plan-plugin-sdk.md  plan-youtube-hls-dash.md  plugin-api.md  protocol-backends.md  release-todo.md
docs/specs/: 2026-03-30-cyberpunk-redesign-plan.md  2026-03-30-cyberpunk-redesign.md  architecture-review.md  audit-2026-04-25.md  docker-security.md  integration-tests.md  tauri-workspace-integration.md
locales/: de.json  en.json
plugin-sdk/: .swcrc  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
plugin-sdk/docs/: cookbook.md  jdownloader-mapping.md  tutorial.md
plugin-sdk/src/: index.ts
plugin-sdk/src/account/: config.ts  index.ts  types.ts
plugin-sdk/src/browser/: browser.ts  cookies.ts  element.ts  headers.ts  index.ts  page.ts  regex-result.ts
plugin-sdk/src/captcha/: captcha.ts  index.ts
plugin-sdk/src/cli/: args.ts  commands.ts  index.ts  main.ts  templates.ts
plugin-sdk/src/container/: ccf.ts  detect.ts  dlc.ts  index.ts  rsdf.ts  shared.ts
plugin-sdk/src/context/: context.ts  index.ts
plugin-sdk/src/errors/: codes.ts  factories.ts  index.ts  plugin-error.ts
plugin-sdk/src/extraction/: encoding.ts  html.ts  index.ts  json.ts  regex.ts
plugin-sdk/src/form/: form.ts  index.ts
plugin-sdk/src/host/: api.ts  index.ts  injection.ts  mock.ts  types.ts
plugin-sdk/src/javascript/: index.ts  javascript.ts
plugin-sdk/src/media/: dash.ts  hls.ts  index.ts  selection.ts
plugin-sdk/src/plugin/: index.ts  matching.ts  plugin.ts
plugin-sdk/src/types/: download-link.ts  file-info.ts  format-info.ts  index.ts  plugin-config.ts
plugin-sdk/src/utility/: format-filename.ts  index.ts  parse-date.ts  parse-duration.ts  parse-size.ts
plugin-sdk/test/: smoke.test.ts
plugin-sdk/test/account/: account.test.ts
plugin-sdk/test/browser/: browser.test.ts  cookies.test.ts  headers.test.ts
plugin-sdk/test/captcha/: captcha.test.ts
plugin-sdk/test/cli/: cli.test.ts
plugin-sdk/test/container/: container.test.ts
plugin-sdk/test/errors/: errors.test.ts
plugin-sdk/test/extraction/: encoding.test.ts  html.test.ts  json.test.ts  regex.test.ts
plugin-sdk/test/form/: form.test.ts
plugin-sdk/test/host/: injection.test.ts  mock.test.ts
plugin-sdk/test/javascript/: javascript.test.ts
plugin-sdk/test/media/: dash.test.ts  hls.test.ts  selection.test.ts
plugin-sdk/test/plugin/: plugin.test.ts
plugin-sdk/test/utility/: utility.test.ts
plugins/: README.md
plugins/extractors/youtube/: plugin.spec.ts  plugin.ts
plugins/hosters/: generic_http.js  generic_http.rn  generic_http.ts  youtube.js  youtube.rn  youtube.ts
plugins/hosters/generic-http/: plugin.spec.ts  plugin.ts
plugins/hosters/xfilesharing/: plugin.spec.ts  plugin.ts
plugins/multi-hosters/alldebrid/: plugin.ts
plugins/multi-hosters/premiumize/: plugin.ts
plugins/multi-hosters/real-debrid/: plugin.ts
plugins/plugin-template/: plugin.js  plugin.rn  plugin.ts
plugins/template/: plugin.ts
plugins/types/: amigo.d.ts
plugins/youtube/: plugin.spec.ts
scripts/: container-start.sh  install.sh
site/: astro.config.mjs  package.json  wrangler.jsonc
site/public/: robots.txt
site/src/layouts/: BaseLayout.astro
site/src/pages/: 404.astro  index.astro
site/src/styles/: global.css
tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri/src/: main.rs
tests/: README.md
web-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-ui/public/: manifest.json  sw.js
web-ui/src/: App.svelte  app.css  main.ts
web-ui/src/components/: AddDialog.svelte  AddPanel.svelte  CaptchaDialog.svelte  ChunkViz.svelte  CommandPalette.svelte  ContextMenu.svelte  DetailPanel.svelte  DownloadCard.svelte  DownloadCompactRow.svelte  DownloadRow.svelte  DropZone.svelte  FeedbackDialog.svelte  Footer.svelte  Icon.svelte  Mascot.svelte  (+8 more)
(+40 files in other folders)
