[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/plugin-runtime",
    "crates/server",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/amigo-labs/amigo-downloader"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "cookies", "stream"] }

# TLS
native-tls = "0.2"
tokio-native-tls = "0.3"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# CLI
clap = { version = "4", features = ["derive"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
amigo-core = { path = "crates/core" }
amigo-plugin-runtime = { path = "crates/plugin-runtime" }
