[package]
name = "amigo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "amigo"
path = "src/main.rs"

[dependencies]
amigo-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
