[package]
name = "amigo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "amigo-dl"
path = "src/main.rs"

[dependencies]
amigo-core = { workspace = true }
amigo-plugin-runtime = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
regex = "1"
serde = { workspace = true }
toml = { workspace = true }
