[package]
name = "amigo-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
native-tls = { workspace = true }
tokio-native-tls = { workspace = true }
crc32fast = "1"
regex = "1"
