[package]
name = "amigo-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
native-tls = { workspace = true }
tokio-native-tls = { workspace = true }
crc32fast = "1"
regex = "1"
toml = { workspace = true }
semver = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
self-replace = { workspace = true }
tempfile = { workspace = true }
m3u8-rs = { workspace = true }
dash-mpd = { workspace = true }
unrar = "0.5"
sevenz-rust = "0.6"
zip = "2"
async-trait = { workspace = true }
rand = "0.8"
