[package]
name = "amigo-extractors"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
regex = "1"
rquickjs = { workspace = true }
scraper = { workspace = true }
url = { workspace = true }
