[package]
name = "amigo-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "amigo-server"
path = "src/main.rs"

[dependencies]
amigo-core = { workspace = true }
amigo-plugin-runtime = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
chrono = { workspace = true }
sha2 = { workspace = true }
hmac = "0.12"
hex = { workspace = true }
base64 = "0.22"
regex = "1"
