[package]
name = "amigo-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "amigo_server"
path = "src/lib.rs"

[[bin]]
name = "amigo-server"
path = "src/main.rs"

[dependencies]
amigo-core = { workspace = true }
amigo-plugin-runtime = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
chrono = { workspace = true }
sha2 = { workspace = true }
hmac = "0.12"
hex = { workspace = true }
base64 = "0.22"
regex = "1"
async-trait = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
cookie = "0.18"
subtle = "2"
thiserror = { workspace = true }
url = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
reqwest = { workspace = true, features = ["json"] }
tempfile = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
